createGetIngredients
