# docs/swagger.json
@@ -347,6 +347,33 @@
         }
       }
     },
+    "/api/ingredients": {
+      "get": {
+        "tags": [
+          "Ingredients"
+        ],
+        "summary": "Get all ingredients",
+        "description": "Returns a list of all ingredients from the database",
+        "responses": {
+          "200": {
+            "description": "A list of ingredients",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ingredient"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
     "/api/recipes": {
       "post": {
         "tags": [
@@ -511,6 +538,9 @@
       "Category": {
         "$ref": "#/components/schemas/category"
       },
+      "Ingredient": {
+        "$ref": "#/components/schemas/ingredient"
+      },
       "user": {
         "type": "object",
         "required": [
@@ -576,6 +606,32 @@
           "name": {
             "type": "string",
             "example": "Desserts"
+          }
+        },
+        "required": [
+          "_id",
+          "name"
+        ]
+      },
+      "ingredient": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string",
+            "example": "640c2dd963a319ea671e37aa"
+          },
+          "name": {
+            "type": "string",
+            "example": "Squid"
+          },
+          "desc": {
+            "type": "string",
+            "example": "A type of cephalopod with a soft, cylindrical body and long tentacles, often used in seafood dishes such as calamari or grilled squid."
+          },
+          "img": {
+            "type": "string",
+            "format": "uri",
+            "example": "https://ftp.goit.study/img/so-yummy/ingredients/640c2dd963a319ea671e37aa.png"
           }
         },
         "required": [
