# src/controllers/getIngredients.js
@@ -1,0 +1,10 @@
+import { Ingredient } from '../db/models/Ingredient.js';
+
+export const getIngredients = async (req, res, next) => {
+  try {
+    const ingredients = await Ingredient.find();
+    res.status(200).json(ingredients);
+  } catch (error) {
+    next(error);
+  }
+};
